starting to build out layout for hom page

--- a/blujay/src/app/app.component.html
+++ b/blujay/src/app/app.component.html
@@ -1,8 +1,12 @@
-<!-- header -->
-<app-header></app-header>
-
-<!-- routes will be rendered here -->
-<router-outlet></router-outlet>
-
-<!-- footer -->
-<app-footer></app-footer>
+<section class="section">
+  <!-- header -->
+  <app-header></app-header>
+</section>
+<section class="section">
+  <!-- routes will be rendered here -->
+  <router-outlet></router-outlet>
+</section>
+<section class="section">
+  <!-- footer -->
+  <app-footer></app-footer>
+</section>
