--- a/blujay/src/app/components/header/header.component.html
+++ b/blujay/src/app/components/header/header.component.html
@@ -1,9 +1,26 @@
-<nav class="navbar">
-
-  <!-- logo -->
+<nav class="navbar is-dark" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item">
-      <img src="https://bulma.io/images/bulma-logo.png">
+      <img src="/assets/images/navbar-logo-wide.png" class="navbar-logo" >
     </a>
+
+    <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+    </a>
+  </div>
+
+  <div class="navbar-menu">
+    <!-- <div class="navbar-start">
+      <a class="navbar-item">
+        Tracks
+      </a>
+    </div> -->
+    <div class="navbar-end">
+      <div class="navbar-item">
+        Cart
+      </div>
+    </div>
   </div>
 </nav>
