--- a/blujay/src/app/components/header/header.component.html
+++ b/blujay/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar is-dark" role="navigation" aria-label="main navigation">
+<nav class="navbar is-primary" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item">
       <img src="/assets/images/navbar-logo-wide.png" class="navbar-logo" >
