more home page UI changes

--- a/blujay/src/app/components/footer/footer.component.html
+++ b/blujay/src/app/components/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="container">
   <div class="content has-text-centered">
     <p>
-      Here's the footer
+      <span>Photo by <a href="https://unsplash.com/@haakon?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Håkon Sataøen</a> on <a href="https://unsplash.com/s/photos/lamborghini?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
     </p>
   </div>
   </div>
