layout is starting to come together

--- a/blujay/src/app/components/header/header.component.html
+++ b/blujay/src/app/components/header/header.component.html
@@ -12,14 +12,11 @@
   </div>
 
   <div class="navbar-menu">
-    <!-- <div class="navbar-start">
-      <a class="navbar-item">
-        Tracks
-      </a>
-    </div> -->
     <div class="navbar-end">
       <div class="navbar-item">
-        Cart
+        <span class="icon is-light is-large">
+          <i class="fas fa-shopping-cart"></i>
+        </span>
       </div>
     </div>
   </div>
