remove padding around hero

--- a/blujay/src/app/app.component.html
+++ b/blujay/src/app/app.component.html
@@ -1,9 +1,9 @@
 <!-- header -->
 <app-header></app-header>
-<section class="section">
+<app-track-list-hero></app-track-list-hero>
+<section class="section" style="padding-top: 0;">
   <!-- routes will be rendered here -->
   <router-outlet></router-outlet>
 </section>
 <!-- footer -->
 <app-footer></app-footer>
-  
