added error handling and notifications to page load

--- a/blujay/src/app/components/footer/footer.component.html
+++ b/blujay/src/app/components/footer/footer.component.html
@@ -1,9 +1,7 @@
 <footer class="footer">
   <div class="container">
   <div class="content has-text-centered">
-    <p>
-      <span>Photo by <a href="https://unsplash.com/@haakon?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Håkon Sataøen</a> on <a href="https://unsplash.com/s/photos/lamborghini?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
-    </p>
+    This is the footer
   </div>
   </div>
 </footer>
