--- a/blujay/src/styles.scss
+++ b/blujay/src/styles.scss
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+.toast {
+    position:absolute;
+    top:67px;
+    right:1%;
+}
