--- a/blujay/src/app/components/track-list/track-list.component.html
+++ b/blujay/src/app/components/track-list/track-list.component.html
@@ -16,7 +16,7 @@
       </div>
       <footer class="card-footer">
         <p class="buttons card-footer-item is-right">
-          <button class="button">
+          <button class="button" (click)="addToCart(track)">
             <span class="icon is-medium has-text-info">
               <i class="fas fa-cart-plus"></i>
             </span>
