--- a/blujay/src/app/components/track-list/track-list.component.html
+++ b/blujay/src/app/components/track-list/track-list.component.html
@@ -1,26 +1,29 @@
 <div class="columns">
   <div class="column" *ngFor="let arr of tracksArr$ | async">
-    <div class="card" *ngFor="let track of arr" style="height: 100%;">
+    <div class="card bj-card" *ngFor="let track of arr">
       <div class="card-image">
         <figure class="image is-3by2">
           <img src="{{track.image}}" alt="Track image">
         </figure>
       </div>
       <div class="card-content">
-        <p class="title is-4">
-          {{track.title}}
-        </p>
-        <p class="subtitle is-6">
-          {{track.description}}
-        </p>
+        <div class="content bj-content">
+          <p class="title is-6">
+            {{track.title}}
+          </p>
+          <p class="subtitle is-7">
+            {{track.description}}
+          </p>
+        </div>
       </div>
       <footer class="card-footer">
-        <p class="buttons card-footer-item is-right">
-          <button class="button" (click)="addToCart(track)">
+        <div class="buttons card-footer-item is-right bj-footer">
+          <button class="button bj-button" (click)="addToCart(track)">
             <span class="icon is-medium has-text-info">
               <i class="fas fa-cart-plus"></i>
             </span>
           </button>
+        </div>
       </footer>
     </div>
   </div>
