badge needs styling

--- a/blujay/src/app/components/header/header.component.html
+++ b/blujay/src/app/components/header/header.component.html
@@ -14,6 +14,11 @@
   <div class="navbar-menu">
     <div class="navbar-end">
       <div class="navbar-item">
+        <!-- <button class="button">
+          <span title="Badge top right" class="badge">8</span>
+          Button
+        </button> -->
+        <app-badge></app-badge>
         <span class="icon is-light is-large">
           <i class="fas fa-shopping-cart"></i>
         </span>
