--- a/blujay/src/app/components/audio-player/audio-player.component.html
+++ b/blujay/src/app/components/audio-player/audio-player.component.html
@@ -1,3 +1,3 @@
-<mat-advanced-audio-player [playlist]="playlist" [displayTitle]="displayTitle" [autoPlay]="false"
-    muted="false" [displayPlaylist]="false" (trackEnded)="onEnded($event)"
-        [displayVolumeControls]="displayVolumeControls" [expanded]="true"></mat-advanced-audio-player>
+<mat-basic-audio-player [displayTitle]="displayTitle" [autoPlay]="false"
+    muted="false" (trackEnded)="onEnded($event)" [audioUrl]="trackLink"
+        [displayVolumeControls]="displayVolumeControls"></mat-basic-audio-player>
