--- a/blujay/src/app/components/track-list/track-list.component.html
+++ b/blujay/src/app/components/track-list/track-list.component.html
@@ -6,6 +6,15 @@
           <img src="{{track.image}}" alt="Track image">
         </figure>
       </div>
+      <div class="card-content is-overlay">
+        <p class="buttons">
+          <button class="button is-dark" (click)="addToCart(track)">
+            <span class="icon is-small">
+              <i class="fas fa-cart-plus"></i>
+            </span>
+          </button>
+        </p>
+      </div>
       <div class="card-content">
         <div class="content bj-content">
           <p class="title is-6">
@@ -17,7 +26,7 @@
         </div>
       </div>
       <footer class="card-footer">
-        <app-audio-player [displayPlayList]="false" [displayTitle]="false"
+        <app-audio-player style="width: 100%; max-width: 100%;" [displayPlayList]="false" [displayTitle]="false"
           [trackLink]="track.file" [trackTitle]="track.title" [displayVolumeControls]="false"
           ></app-audio-player>
         <!-- <div class="buttons card-footer-item is-right bj-footer">
