add remove track from cart

--- a/blujay/src/app/components/track-list/track-list.component.html
+++ b/blujay/src/app/components/track-list/track-list.component.html
@@ -8,9 +8,14 @@
       </div>
       <div class="card-content is-overlay">
         <p class="buttons">
-          <button class="button is-dark" (click)="addToCart(track)">
+          <button class="button is-dark" (click)="addToCart(track)" *ngIf="!track.inCart">
             <span class="icon is-small">
               <i class="fas fa-cart-plus"></i>
+            </span>
+          </button>
+          <button class="button is-dark" (click)="removeFromCart(track)" *ngIf="track.inCart">
+            <span class="icon is-small">
+              <i class="fas fa-minus"></i>
             </span>
           </button>
         </p>
@@ -26,16 +31,9 @@
         </div>
       </div>
       <footer class="card-footer">
-        <app-audio-player style="width: 100%; max-width: 100%;" [displayPlayList]="false" [displayTitle]="false"
+        <!-- <app-audio-player style="width: 100%; max-width: 100%;" [displayPlayList]="false" [displayTitle]="false"
           [trackLink]="track.file" [trackTitle]="track.title" [displayVolumeControls]="false"
-          ></app-audio-player>
-        <!-- <div class="buttons card-footer-item is-right bj-footer">
-          <button class="button bj-button" (click)="addToCart(track)">
-            <span class="icon is-medium has-text-info">
-              <i class="fas fa-cart-plus"></i>
-            </span>
-          </button>
-        </div> -->
+          ></app-audio-player> -->
       </footer>
     </div>
   </div>
