--- a/blujay/src/app/components/header/header.component.html
+++ b/blujay/src/app/components/header/header.component.html
@@ -18,7 +18,7 @@
           <span title="Badge top right" class="badge">8</span>
           Button
         </button> -->
-        <app-badge></app-badge>
+        <app-badge [arr]="_cartService.cart"></app-badge>
         <span class="icon is-light is-large">
           <i class="fas fa-shopping-cart"></i>
         </span>
