--- a/blujay/src/app/components/track-list/track-list.component.html
+++ b/blujay/src/app/components/track-list/track-list.component.html
@@ -1,4 +1,49 @@
-<div class="columns">
+<div class="container">
+  <article class="panel is-warning">
+    <p class="panel-heading">
+      Tracks
+    </p>
+    <p class="panel-tabs">
+      <a class="is-active">Popular</a>
+      <a>EDM</a>
+      <a>Trap</a>
+      <a>Boom Bap</a>
+    </p>
+    <div class="panel-block">
+      <p class="control has-icons-left">
+        <input class="input is-primary" type="text" placeholder="Search">
+        <span class="icon is-left">
+          <i class="fas fa-search" aria-hidden="true"></i>
+        </span>
+      </p>
+    </div>
+    <div class="panel-block is-active" *ngFor="let track of tracksArr$ | async">
+      <img src="{{track.image}}" class="track-image panel-icon"/>
+      {{track.title}}
+      <div class="buttons panel-buttons">
+        <button class="button is-info">
+          <span class="icon is-small">
+            <i class="fas fa-play"></i>
+          </span>
+        </button>
+        <button class="button is-info" (click)="addToCart(track)" *ngIf="!track.inCart">
+          <span class="icon is-small">
+            <i class="fas fa-cart-plus"></i>
+          </span>
+        </button>
+        <button class="button is-info is-small" (click)="removeFromCart(track)" *ngIf="track.inCart">
+          <span class="icon is-small">
+            <i class="fas fa-minus"></i>
+          </span>
+        </button>
+      </div>
+      <!-- <app-audio-player [displayPlayList]="false" [displayTitle]="false"
+          [trackLink]="track.file" [trackTitle]="track.title" [displayVolumeControls]="false"
+          ></app-audio-player> -->
+    </div>
+  </article>
+</div>
+<!-- <div class="columns">
   <div class="column" *ngFor="let arr of tracksArr$ | async">
     <div class="card bj-card" *ngFor="let track of arr">
       <div class="card-image">
@@ -31,10 +76,10 @@
         </div>
       </div>
       <footer class="card-footer">
-        <!-- <app-audio-player style="width: 100%; max-width: 100%;" [displayPlayList]="false" [displayTitle]="false"
+        <app-audio-player style="width: 100%; max-width: 100%;" [displayPlayList]="false" [displayTitle]="false"
           [trackLink]="track.file" [trackTitle]="track.title" [displayVolumeControls]="false"
-          ></app-audio-player> -->
+          ></app-audio-player>
       </footer>
     </div>
   </div>
-</div>
+</div> -->
