--- a/blujay/src/app/components/audio-player/audio-player.component.html
+++ b/blujay/src/app/components/audio-player/audio-player.component.html
@@ -1,3 +1,3 @@
-<mat-basic-audio-player [displayTitle]="displayTitle" [autoPlay]="false"
-    muted="false" (trackEnded)="onEnded($event)" [audioUrl]="trackLink"
-        [displayVolumeControls]="displayVolumeControls"></mat-basic-audio-player>
+<footer class="footer" *ngIf="visible | async">
+  {{(track | async)?.title}}
+</footer>
