--- a/blujay/src/bjstyles.scss
+++ b/blujay/src/bjstyles.scss
@@ -12,6 +12,7 @@ $family-serif: "Merriweather", "Georgia", serif;
 // Set the derived variables
 $primary: $blue;
 $primary-invert: $blue-invert;
+$footer-background-color: pink;
 
 $family-primary: $family-serif;
 
