--- a/blujay/src/app/components/stripe-payment/stripe-payment.component.html
+++ b/blujay/src/app/components/stripe-payment/stripe-payment.component.html
@@ -5,9 +5,9 @@
       <button id="submit-button" type="submit">
           Pay ${{_totalAmount}}
       </button>
-      <mat-error id="card-errors" role="alert" *ngIf="cardError">
+      <!-- <mat-error id="card-errors" role="alert" *ngIf="cardError">
           <mat-icon style="color: #f44336">cancel</mat-icon>
           {{ cardError }}
-      </mat-error>
+      </mat-error> -->
   </div>
 </form>
