--- a/blujay/src/app/app.component.html
+++ b/blujay/src/app/app.component.html
@@ -1,10 +1,9 @@
 <!-- header -->
 <app-header></app-header>
 <app-track-list-hero></app-track-list-hero>
-<section class="section" style="padding-top: 0;">
-  <!-- routes will be rendered here -->
-  <router-outlet></router-outlet>
-</section>
+
+<router-outlet></router-outlet>
+
 <!-- footer -->
-<app-footer></app-footer>
+<!-- <app-footer></app-footer> -->
 <app-toast></app-toast>
