--- a/blujay/src/styles.scss
+++ b/blujay/src/styles.scss
@@ -23,8 +23,16 @@ $blujay-warn: mat-palette($mat-red);
 
 /* You can add global styles to this file, and also import other style files */
 .toast {
-    position:absolute;
-    z-index: 1;
+  position: fixed !important;
+  z-index: 101;
+  top: 0;
+  right: 0;
+  text-align: center;
+  line-height: 2.5;
+  overflow: hidden;
+  -webkit-box-shadow: 0 0 5px black;
+  -moz-box-shadow:    0 0 5px black;
+  box-shadow:         0 0 5px black;
 }
 
 .is-centered {
