view cart still needs remove

--- a/blujay/src/app/app.component.html
+++ b/blujay/src/app/app.component.html
@@ -2,7 +2,9 @@
 <app-header></app-header>
 <app-track-list-hero></app-track-list-hero>
 
-<router-outlet></router-outlet>
+<div class="outlet">
+  <router-outlet></router-outlet>
+</div>
 
 <!-- footer -->
 <!-- <app-footer></app-footer> -->
