--- a/blujay/src/app/components/stripe-payment/stripe-payment.component.html
+++ b/blujay/src/app/components/stripe-payment/stripe-payment.component.html
@@ -1,13 +1,16 @@
-<form (ngSubmit)="createStripeToken()" class="checkout">
-  <label for="card-info">Card Info</label>
-<div id="form-field">
-      <div id="card-info" #cardInfo></div>
-      <button id="submit-button" type="submit">
-          Pay ${{_totalAmount}}
-      </button>
-      <!-- <mat-error id="card-errors" role="alert" *ngIf="cardError">
-          <mat-icon style="color: #f44336">cancel</mat-icon>
-          {{ cardError }}
-      </mat-error> -->
-  </div>
-</form>
+<div class="container">
+  <form (ngSubmit)="createStripeToken()" class="checkout">
+    <label for="card-info">Card Info</label>
+  <div id="form-field">
+        <div id="card-info" #cardInfo></div>
+        <button id="submit-button" type="submit">
+            Pay ${{_totalAmount}}
+        </button>
+        <!-- <mat-error id="card-errors" role="alert" *ngIf="cardError">
+            <mat-icon style="color: #f44336">cancel</mat-icon>
+            {{ cardError }}
+        </mat-error> -->
+    </div>
+  </form>
+
+</div>
