--- a/blujay/src/app/components/stripe-payment/stripe-payment.component.html
+++ b/blujay/src/app/components/stripe-payment/stripe-payment.component.html
@@ -4,7 +4,7 @@
   <div id="form-field">
         <div id="card-info" #cardInfo></div>
         <button id="submit-button" type="submit">
-            Pay ${{_totalAmount}}
+            Pay ${{totalAmount}}
         </button>
         <!-- <mat-error id="card-errors" role="alert" *ngIf="cardError">
             <mat-icon style="color: #f44336">cancel</mat-icon>
