--- a/blujay/src/app/components/badge/badge.component.html
+++ b/blujay/src/app/components/badge/badge.component.html
@@ -1,1 +1,1 @@
-<span title="Badge top right" class="badge">{{count}}</span>
+<span *ngIf="count !== 0" title="Badge top right" class="badge">{{count}}</span>
