--- a/blujay/src/styles.scss
+++ b/blujay/src/styles.scss
@@ -51,5 +51,9 @@ $toast-top-margin: 66px;
 
 .is-circular { border-radius: 50% !important; }
 
+.add-to-cart-width {
+  width:93px;
+}
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
