--- a/blujay/src/app/components/track-list/track-list.component.html
+++ b/blujay/src/app/components/track-list/track-list.component.html
@@ -20,12 +20,12 @@
             <i class="fas fa-play"></i>
           </span>
         </button>
-        <button class="button is-circular" (click)="removeFromCart(track)" *ngIf="track.inCart">
+        <button class="button is-circular" (click)="removeFromCart($event, track)" *ngIf="track.inCart">
           <span class="icon is-small">
             <i class="fas fa-minus"></i>
           </span>
         </button>
-        <button class="button is-primary add-to-cart-width" (click)="addToCart(track)" *ngIf="!track.inCart">
+        <button class="button is-primary add-to-cart-width" (click)="addToCart($event, track)" *ngIf="!track.inCart">
           <span class="icon is-small">
             <i class="fas fa-cart-plus"></i>
           </span>
