--- a/blujay/src/app/components/checkout/checkout.component.html
+++ b/blujay/src/app/components/checkout/checkout.component.html
@@ -26,7 +26,7 @@
     </div>
     <div class="field is-grouped">
       <div class="control">
-        <button type="submit" class="button is-link">Make Payment</button>
+        <app-bj-button [text]="'Make Payment'" [type]="'submit'" [classes]="'button is-link'"></app-bj-button>
       </div>
     </div>
   </form>
