--- a/blujay/src/app/components/checkout/checkout.component.html
+++ b/blujay/src/app/components/checkout/checkout.component.html
@@ -12,9 +12,16 @@
     <div class="field">
       <label class="label">Name</label>
       <div class="control">
-        <input class="input" type="text" placeholder="Text input">
+        <input class="input" type="text" placeholder="Full Name">
       </div>
     </div>
+    <div class="field">
+      <label class="label">Email</label>
+      <div class="control">
+        <input class="input" type="text" placeholder="Email">
+      </div>
+    </div>
+    <div class="field">
     <div class="field">
       <label class="label">Credit Card</label>
       <div class="control">
