fixed build (again)

--- a/blujay/src/app/components/checkout/checkout.component.html
+++ b/blujay/src/app/components/checkout/checkout.component.html
@@ -36,6 +36,6 @@
         <app-bj-button [text]="'Make Payment'" [type]="'submit'" [classes]="'button is-link'"></app-bj-button>
       </div>
     </div>
+  </div>
   </form>
 </section>
-
