added order detail component, started changing to material snack

--- a/blujay/src/app/components/checkout/checkout.component.html
+++ b/blujay/src/app/components/checkout/checkout.component.html
@@ -7,7 +7,7 @@
     </div>
   </div>
 </section>
-<section class="container">
+<section class="container" style="padding-bottom: 8px;">
   <form (ngSubmit)="createIntent()">
     <div class="field">
       <label class="label">Name</label>
@@ -39,3 +39,4 @@
   </div>
   </form>
 </section>
+<app-order-details></app-order-details>
