--- a/blujay/src/app/components/toast/toast.component.html
+++ b/blujay/src/app/components/toast/toast.component.html
@@ -1,4 +1,3 @@
-<div *ngIf="message$ | async; let message" [className]="'toast notification is-success ' + message.stlye">
-  <button class="delete" (click)="clear()"></button>
-  {{message.content}}
+<div [className]="'toast notification is-success ' + ''">
+  TEST
 </div>
