finished setting up snackbar

--- a/blujay/src/bjstyles.scss
+++ b/blujay/src/bjstyles.scss
@@ -5,7 +5,9 @@
 // Set your own initial variables
 $blue: #5ec6ef;
 $blue-invert: #fff;
-
+.bj-snackbar {
+  background-color: $yellow;
+}
 $family-serif: "Merriweather", "Georgia", serif;
 
 
