generating intent on checkout load

--- a/blujay/src/app/components/header/header.component.html
+++ b/blujay/src/app/components/header/header.component.html
@@ -22,7 +22,7 @@
           <span class="icon is-light is-large">
             <i class="fas fa-shopping-cart"></i>
           </span>
-          <app-badge [arr]="cartService.cart"></app-badge>
+          <app-badge [arr]="cartService.cart$"></app-badge>
         </button>
       </div>
     </div>
