stripe api does not like my session request but the typings do

--- a/blujay/src/app/components/checkout/checkout.component.html
+++ b/blujay/src/app/components/checkout/checkout.component.html
@@ -24,7 +24,7 @@
     <div class="field">
       <label class="label">Credit Card</label>
       <div class="control">
-
+        <button id="checkout-button">Checkout</button>
       </div>
     </div>
     <div class="field is-grouped">
