--- a/blujay/src/app/components/checkout/checkout.component.html
+++ b/blujay/src/app/components/checkout/checkout.component.html
@@ -23,7 +23,7 @@
     </div>
     <div class="field is-grouped">
       <div class="control">
-        <app-bj-button [text]="'Make Payment'" [type]="'submit'" [classes]="'button is-link'"></app-bj-button>
+        <app-bj-button [text]="'Checkout'" [type]="'submit'" [classes]="'button is-link'"></app-bj-button>
       </div>
     </div>
   </form>
